[gd_scene load_steps=10 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://magero.tres" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 400
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1028.0
margin_bottom = 607.0
color = Color( 0.183333, 0, 0.44, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1028.0
margin_bottom = 479.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.966667, 0, 1 )
text = "NET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkSettings" type="ColorRect" parent="."]
margin_left = 345.719
margin_top = 467.116
margin_right = 657.719
margin_bottom = 558.116
color = Color( 0.0901961, 0, 0.411765, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="NetworkSettings"]
margin_right = 312.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSettings/CenterContainer"]
margin_left = 10.0
margin_top = 12.0
margin_right = 302.0
margin_bottom = 79.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="NetworkSettings/CenterContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 67.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLabel" type="Label" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Hostname:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostEdit" type="LineEdit" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_right = 292.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "localhost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" type="Label" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 30.0
margin_right = 88.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "Port:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortEdit" type="LineEdit" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_top = 25.0
margin_right = 292.0
margin_bottom = 46.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 5 )
text = "1337"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 50.0
margin_right = 88.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 6 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHost" type="Button" parent="NetworkSettings/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 92.0
margin_top = 50.0
margin_right = 292.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 7 )
text = "Create server"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NetworkSettings/CenterContainer/VBoxContainer/GridContainer/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="NetworkSettings/CenterContainer/VBoxContainer/GridContainer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
